# tags-sync

./: .gitignore  Cargo.toml  action.yml  readme.md  rustfmt.toml
.github/workflows/: integration-testing.yml
src/: consts.rs  context.rs  main.rs
src/utils/: commit.rs  env.rs  git.rs  github.rs  mod.rs  test.rs
