[package]
name = "tags-sync"
version = "0.1.0"
authors = ["chachako <chachakko@outlook.com>"]
edition = "2021"

[dependencies]
log = "0.4"
regex = "1"
git2 = "0.15"
paste = "1.0"
anyhow = "1.0"
once_cell = "1"
itertools = "0.10"
async-trait = "0.1"
run_script = "0.10.0"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
octocrab = { git = "https://github.com/chachako/octocrab" }

[dev-dependencies]
mockall = "0.11"
tempfile = "3"